test/neg/neg-serial5.errc
Serialization via UPCXX_SERIALIZED_FIELDS..... requires that all fields serialize and deserialize as the same type
